--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
       <input type="text" id="display" class="form-control" readonly />
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">1</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">2</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">3</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">+</button></div>
+        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="1" onClick="valor('1')"></input></div>
+        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="2" onClick="valor('2')"></input></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">3</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">+</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">4</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">5</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">6</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">-</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">4</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">5</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">6</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">-</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">7</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">8</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">9</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">*</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">7</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">8</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">9</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">*</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">0</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">.</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">C</button></div>
-        <div class="col"><button type="button" class="btn btn-outline-secondary btn-block">/</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">0</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">.</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">C</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block">/</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-outline-primary btn-block">=</button></div>
+        <div class="col"><button type="button" class="btn btn-primary btn-block">=</button></div>
       </div>
     </form>
   </div>
