--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <input type="text" id="display" class="form-control" readonly />
       <br />
       <div class="row">
-        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="1" onClick="valor('1')"></input></div>
-        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="2" onClick="valor('2')"></input></div>
+        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="1" onClick="inputValue('1')"></input></div>
+        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="2" onClick="inputValue('2')"></input></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">3</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">+</button></div>
       </div>
