--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
       <input type="text" id="display" class="form-control" readonly />
       <br />
       <div class="row">
-        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="1" onClick="inputValue('1')"></input></div>
-        <div class="col"><input type="button" class="btn btn-secondary btn-block" value="2" onClick="inputValue('2')"></input></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">3</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('1')">1</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('2')">2</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('3')">3</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">+</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">4</button></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">5</button></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">6</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('4')">4</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('5')">5</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('6')">6</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">-</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">7</button></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">8</button></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">9</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('7')">7</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('8')">8</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('9')">9</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">*</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">0</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onClick="inputValue('0')">0</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">.</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">C</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">/</button></div>
