--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="row">
         <div class="col"><input type="button" class="btn btn-secondary btn-block" value="1" onClick="inputValue('1')"></input></div>
         <div class="col"><input type="button" class="btn btn-secondary btn-block" value="2" onClick="inputValue('2')"></input></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">3</button></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">+</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onclick="inputValue('3')">3</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onclick="inputValue('+')">+</button></div>
       </div>
       <br />
       <div class="row">
@@ -39,16 +39,16 @@
       <div class="row">
         <div class="col"><button type="button" class="btn btn-secondary btn-block">0</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">.</button></div>
-        <div class="col"><button type="button" class="btn btn-secondary btn-block">C</button></div>
+        <div class="col"><button type="button" class="btn btn-secondary btn-block" onclick="clean()">C</button></div>
         <div class="col"><button type="button" class="btn btn-secondary btn-block">/</button></div>
       </div>
       <br />
       <div class="row">
-        <div class="col"><button type="button" class="btn btn-primary btn-block">=</button></div>
+        <div class="col"><button type="button" class="btn btn-primary btn-block" onclick="result()">=</button></div>
       </div>
     </form>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="js/functions.js"></script>
