se agregan colores a los botones y css

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <div class="container">
-      <h1>Calculadora</h1>
+      <h1 id="title">Calculadora</h1>
       <form>
         <input type="text" id="display" class="form-control" readonly />
         <br />
@@ -49,7 +49,7 @@
             </button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-secondary btn-block">+</button>
+            <button type="button" class="btn btn-success btn-block" onclick="inputValue('+')">+</button>
           </div>
         </div>
         <br />
@@ -82,7 +82,7 @@
             </button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-secondary btn-block">-</button>
+            <button type="button" class="btn btn-success btn-block" onclick="inputValue('-')">-</button>
           </div>
         </div>
         <br />
@@ -115,7 +115,7 @@
             </button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-secondary btn-block">*</button>
+            <button type="button" class="btn btn-success btn-block" onclick="inputValue('*')">*</button>
           </div>
         </div>
         <br />
@@ -130,19 +130,19 @@
             </button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-secondary btn-block">.</button>
+            <button type="button" class="btn btn-secondary btn-block" onclick="inputValue('.')">.</button>
           </div>
           <div class="col">
             <button
               type="button"
-              class="btn btn-secondary btn-block"
+              class="btn btn-danger btn-block"
               onclick="clean()"
             >
               C
             </button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-secondary btn-block">/</button>
+            <button type="button" class="btn btn-success btn-block" onclick="inputValue('/')">/</button>
           </div>
         </div>
         <br />
